# dma-image-processor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
configs/: README.md  default.toml  maxpaced.toml  noloop.toml  unpaced.toml
images/test_images/: image_0000.npy  image_0001.npy  image_0002.npy  image_0003.npy  image_0004.npy  image_0005.npy  image_0006.npy  image_0007.npy  image_0008.npy  image_0009.npy  image_0010.npy  image_0011.npy  image_0012.npy  image_0013.npy  image_0014.npy  image_0015.npy  image_0016.npy  image_0017.npy  image_0018.npy  image_0019.npy  image_0020.npy  image_0021.npy  image_0022.npy  image_0023.npy  image_0024.npy  image_0025.npy  image_0026.npy  image_0027.npy  image_0028.npy  image_0029.npy  image_0030.npy  image_0031.npy  image_0032.npy  image_0033.npy  image_0034.npy  image_0035.npy  image_0036.npy  image_0037.npy  image_0038.npy  image_0039.npy  (+60 more)
include/: archiver.hpp  config.hpp  dma_source.hpp  metrics.hpp  poisson.hpp  poisson_detector.hpp  processor.hpp  slab_pool.hpp  spsc_ring.hpp
src/: archiver.cpp  cnpy.cpp  config.cpp  dma_source.cpp  driver.cpp  metrics.cpp  processor.cpp
tests/: test_archiver.cpp  test_dma_source.cpp  test_poisson.cpp  test_poisson_detector.cpp  test_processor.cpp  test_slab_pool.cpp  test_spsc_ring.cpp
utils/: decode.py  image.py  npydiff.py
